--- a/flaskApp/templates/base.html
+++ b/flaskApp/templates/base.html
@@ -1,20 +1,31 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Flaskr</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1><a href="{{ url_for('index') }}">Flaskr</a></h1>
-  <ul>
-    <li><a href="{{ url_for('simple_pages.show', page="about")}}">About</a></li>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="{{ url_for('index') }}" class="navbar-brand" href="#">Project1</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a href="{{ url_for('simple_pages.show', page="about")}}" class="nav-link" href="#">About </a>
+      </li>
+      {% if g.user %}
+      <li class="nav-item"><span>{{ g.user['username'] }}</span>
+      <li class="nav-item"><a href="{{ url_for('auth.logout') }}" class="nav-link" href="#">Log Out</a>
     {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
+      <li class="nav-item"><a href="{{ url_for('auth.register') }}" class="nav-link" href="#">Register</a>
+      <li class="nav-item"><a href="{{ url_for('auth.login') }}" class="nav-link" href="#">Log In</a>
     {% endif %}
-  </ul>
+    </ul>
+    </div>
 </nav>
+
 <section class="content">
   <header>
     {% block header %}{% endblock %}
