--- a/flaskApp/blog/templates/blog/index.html
+++ b/flaskApp/blog/templates/blog/index.html
@@ -1,22 +1,25 @@
 {% extends 'base.html' %}
 
+<div class="row">
 {% block header %}
-  <h1>{% block title %}Vendor{% endblock %}</h1>
+  <h1 class="display-3">{% block title %}Vendor{% endblock %}</h1>
   {% if g.user %}
-    <a class="action" href="{{ url_for('blog.create') }}">New</a>
+    <div class="float-right">
+        <a class=" action btn btn-outline-primary" href="{{ url_for('blog.create') }}" role="button">New</a></div>
   {% endif %}
 {% endblock %}
+</div>
 
 {% block content %}
   {% for post in posts %}
     <article class="post">
       <header>
         <div>
-          <h1>{{ post['title'] }}</h1>
+          <h1 class="display-4">{{ post['title'] }}</h1>
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
         {% if g.user['id'] == post['author_id'] %}
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
+          <a class="action btn btn-outline-secondary" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
         {% endif %}
       </header>
       <p class="body">{{ post['body'] }}</p>
