--- a/flaskApp/simple_pages/templates/about.html
+++ b/flaskApp/simple_pages/templates/about.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block header %}
+    <h1 class="display-3">{% block title %}About{% endblock %}</h1>
+{% endblock %}
+
 {% block content %}
     About Page
 {% endblock %}
