--- a/flaskApp/auth/templates/auth/login.html
+++ b/flaskApp/auth/templates/auth/login.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
+  <h1 class="display-3">{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+  <div class="form-group">
+        <label for="username">Username</label>
+        <input name="username" class="form-control" id="username" required>
+  </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" id="password" required>
+    </div><br>
+    <input type="submit" class="form-control btn btn-success btn-lg btn-block" value="Log In">
   </form>
 {% endblock %}
