--- a/flaskApp/blog/templates/blog/create.html
+++ b/flaskApp/blog/templates/blog/create.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}New Post{% endblock %}</h1>
+  <h1 class="display-3">{% block title %}New Post{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="title">Title</label>
-    <input name="title" id="title" value="{{ request.form['title'] }}" required>
-    <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
-    <input type="submit" value="Save">
+  <div class="form-group">
+      <label for="title">Title</label>
+      <input name="title" class="form-control" id="title" value="{{ request.form['title'] }}" required>
+  </div>
+  <div class="form-group">
+      <label for="body">Body</label>
+      <textarea name="body" class="form-control" id="body">{{ request.form['body'] }}</textarea>
+  </div> <br>
+    <input type="submit" class="form-control btn btn-secondary btn-lg btn-block" value="Save">
   </form>
 {% endblock %}
