--- a/flaskApp/blog/templates/blog/update.html
+++ b/flaskApp/blog/templates/blog/update.html
@@ -1,19 +1,23 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Edit "{{ post['title'] }}"{% endblock %}</h1>
+  <h1 class="display-3">{% block title %}Edit "{{ post['title'] }}"{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="title">Title</label>
-    <input name="title" id="title" value="{{ request.form['title'] or post['title'] }}" required>
-    <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['body'] or post['body'] }}</textarea>
-    <input type="submit" value="Save">
+  <div class="form-group">
+      <label for="title">Title</label>
+      <input name="title" class="form-control" id="title" value="{{ request.form['title'] or post['title'] }}" required>
+  </div>
+  <div class="form-group">
+      <label for="body">Body</label>
+      <textarea name="body" class="form-control" id="body">{{ request.form['body'] or post['body'] }}</textarea>
+  </div><br>
+    <input type="submit" class="form-control btn btn-success btn-lg btn-block" value="Save">
   </form>
   <hr>
   <form action="{{ url_for('blog.delete', id=post['id']) }}" method="post">
-    <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+    <input type="submit" class="form-control danger btn btn-danger btn-lg btn-block" value="Delete" onclick="return confirm('Are you sure?');">
   </form>
 {% endblock %}
