--- a/flaskApp/templates/base.html
+++ b/flaskApp/templates/base.html
@@ -1,40 +1,58 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{% endblock %} - Flaskr</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+<div class = "container">
+    <div class = "row">
+        <header class="mb-2">
 
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a href="{{ url_for('index') }}" class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{{ url_for('simple_pages.show', page="about")}}" class="nav-link" href="#">About </a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav d-flex">
+                        {% if g.user %}
+                            <li class="nav-item"><a class="nav-link" href="#">{{ g.user['username'] }}</a>
+                            <li class="nav-item"><a href="{{ url_for('auth.logout') }}" class="nav-link" href="#">Log Out</a>
+                        {% else %}
+                            <li class="nav-item"><a href="{{ url_for('auth.register') }}" class="nav-link" href="#">Register</a>
+                            <li class="nav-item"><a href="{{ url_for('auth.login') }}" class="nav-link" href="#">Log In</a>
+                        {% endif %}
+                    </ul>
+            </nav>
+        </header>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href="{{ url_for('index') }}" class="navbar-brand" href="#">Project1</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a href="{{ url_for('simple_pages.show', page="about")}}" class="nav-link" href="#">About </a>
-      </li>
-      {% if g.user %}
-      <li class="nav-item"><span>{{ g.user['username'] }}</span>
-      <li class="nav-item"><a href="{{ url_for('auth.logout') }}" class="nav-link" href="#">Log Out</a>
-    {% else %}
-      <li class="nav-item"><a href="{{ url_for('auth.register') }}" class="nav-link" href="#">Register</a>
-      <li class="nav-item"><a href="{{ url_for('auth.login') }}" class="nav-link" href="#">Log In</a>
-    {% endif %}
-    </ul>
+    <div class="row">
+    <div class="header">
+        {% block header %}{% endblock %}
+    <hr>
     </div>
-</nav>
-
-<section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</section>
-<footer class="container">
-    Environment: {{ deployment_environment }} - Copyright: {{ year }}
-</footer>
+    {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+    {% endfor %}
+    {% block content %}{% endblock %}
+    <hr>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</div>
+    <footer class="text-center mt-5">
+        Environment: {{ deployment_environment }} - Copyright: {{ year }}
+    </footer>
+</body>
+</html>
